# data-gen

./: .flake8  README.md  pyproject.toml
src/data_gen/: __init__.py
src/data_gen/util/: __init__.py
tests/data_gen/: test_init.py
